moved src/{main,test} -> java/ ; cleaned up build file